k8s/cnas-php-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cnas-php-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cnas-php-app
  template:
    metadata:
      labels:
        app: cnas-php-app
    spec:
      containers:
      - name: php
        image: asia-southeast1-docker.pkg.dev/cnas-assignment-467305/php-repo/cnas-php-app:latest
        ports:
        - containerPort: 80
