k8s/cnas-php-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cnas-php-app-service
spec:
  selector:
    app: cnas-php-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
