k8s/php-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-service
spec:
  selector:
    app: php
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
